Exclude non-simple-usage audio nodes from being selected as primary node, and do not persist their active state in prefs.

BUG=591777

Review URL: https://codereview.chromium.org/1759103003

Cr-Commit-Position: refs/heads/master@{#379861}

Former-commit-id: b46664f407fa853f2573f05db37784b04f5a013c